<resources>
    <string name="app_name">Quiz your friend</string>
    <string name="trueB">true</string>
    <string name="falseB">false</string>
    <string name="nextB">next</string>
    <string name="question1">Which color do you like the most from these?</string>
    <string name="question1f">Which color does your friend like the most from these?</string>
    <string name="question1a">Red</string>
    <string name="question1b">Yellow</string>
    <string name="question1c">Green</string>
    <string name="question1d">Blue</string>
    <string name="question2">What would you rather do</string>
    <string name="question2f">What would your friend rather do?</string>
    <string name="question2a">Eat</string>
    <string name="question2b">Sleep</string>
    <string name="question2c">Play video games</string>
    <string name="question2d">Study</string>
    <string name="question3">You got a 85 and a math test, how do you feel?</string>
    <string name="question3f">your friend got a 85 on their test, how do they feel?</string>
    <string name="question3a">BEST DAY OF MY LIFE!!!</string>
    <string name="question3b">kill me now.</string>
    <string name="question3c">meh</string>
    <string name="question3d">what test?</string>
    <string name="question4">You found a $100 bill on the ground, what do you buy?</string>
    <string name="question4f">Your friend found a $100 bill on the ground, what do they buy?</string>
    <string name="question4a">Save it for college</string>
    <string name="question4b">clothes</string>
    <string name="question4c">food</string>
    <string name="question4d">video games</string>
    <string name="question5">Which class is the worst?</string>
    <string name="question5f">Which class does your friend hate the most?</string>
    <string name="question5a">Seniors</string>
    <string name="question5b">Juniors</string>
    <string name="question5c">Sophomores</string>
    <string name="question5d">Freshman</string>
    <string name="question6">You have to stay after school today, why?</string>
    <string name="question6f">Your friend has to stay after school, why?</string>
    <string name="question6a">We came for the sports!</string>
    <string name="question6b">Making up a test</string>
    <string name="question6c">Nerd Team/Nerd Olympiad</string>
    <string name="question6d">Missed the bus :(</string>
    <string name="question7">You lost the most valuable thing in your life, what was it?</string>
    <string name="question7f">Your friend lost the most valuable thing in their life, what was it?</string>
    <string name="question7a">A laptop</string>
    <string name="question7b">Friends :(</string>
    <string name="question7c">Homework worth 50 points</string>
    <string name="question7d">Dignity</string>
    <string name="question8">Who do you spend the most time with?</string>
    <string name="question8f">Who does your friend spend the most time with?</string>
    <string name="question8a">A \"friend\" of the opposite gender</string>
    <string name="question8b">parents</string>
    <string name="question8c">The other person taking this quiz</string>
    <string name="question8ca">Me</string>
    <string name="question8d">themselves</string>
    <string name="question9">You turn on the TV, what\'s the last thing you watched?</string>
    <string name="question9f">Your friend turns on the TV, what\'s the last thing they watched?</string>
    <string name="question9a">A cheesy K-drama</string>
    <string name="question9b">A cartoon</string>
    <string name="question9c">A reality show</string>
    <string name="question9d">Game of Thrones</string>
    <string name="question10">You guys are hanging out this weekend, what would you rather do?</string>
    <string name="question10f">You guys are hanging out this weekend, what would your friend rather do?</string>
    <string name="question10a">LAN party</string>
    <string name="question10b">Ball</string>
    <string name="question10c">food</string>
    <string name="question10d">Watch a movie</string>
    <string name="correct_toast">Correct! You\'re closer than you think</string>
    <string name="incorrect_toast">Wrong! Are you even friends?</string>
    <string name="dark_side">Will you fail to uphold personal and academic honor in the TJHSST community?</string>
    <string name="Honor_code">Honor Code</string>\
    <string name="Anakin">Forgive me</string>
    <string name="Luke">Let me out!</string>
    <string name="answerA">The answer you seek is........A</string>
    <string name="answerB">The answer you seek is........B</string>\
    <string name="answerC">The answer you seek is........C</string>
    <string name="answerD">The answer you seek is........D</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="empty"> </string>
    <string name="back">back</string>
    <string name="retry">Retry</string>
    <string name="highscore">Best friends</string>
    <string name="submit">Submit</string>
    <string name="tutorial">Once you\'re done, hand the device over to a friend!</string>
</resources>
