<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/dark_side"
        android:textColor="#ff0000"/>
    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textColor="#ff0000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "283dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="0.18">
        <Button
            android:id="@+id/lie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Anakin"
            android:padding="25dp"
            android:textColor="#ff0000"
            />
        <Button
            android:id="@+id/repent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Luke"
            android:padding="25dp"
            android:textColor="#ffff00"/>
    </LinearLayout>
</LinearLayout>