<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1"
    android:background="#3ffffa">

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textColor="#7f00ff"/>
    <TextView
        android:id="@+id/rip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:textColor="#7f00ff"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/name1"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/name2"
            android:layout_width="120dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <ImageView
        android:id="@+id/face"
        android:layout_width="240dp"
        android:layout_height="240dp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/restart"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/retry"/>
        <Button
            android:id="@+id/submit"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:text="@string/submit"/>
        <Button
            android:id="@+id/highscore"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:textSize="11sp"
            android:text="@string/highscore"/>

    </LinearLayout>
</LinearLayout>